# study-helper-bot

./: .gitignore  LICENSE  README.md  StudyHelperBotDB.sql  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test_install.py  tox.ini
src/studyhelperbot/: __init__.py  bot.py  config.py  db.py  logging_setup.py  registration.py  rethinkdb_setup.py  sync_usos_data.py  usosapi.py
src/studyhelperbot/commands/: answers.py  commits.py  common.py  keyboards.py  storytellers.py  usos_operations.py
src/studyhelperbot/config/: config_example.ini  parse_config.py
src/studyhelperbot/handlers/: __init__.py  errors.py  registration.py  responses.py  usosapi.py
