[metadata]
name = studyhelperbot
description = Telegram bot for managing students' tasks
version = 0.0.1
author = Vitalii Morskyi
license = MIT
license_file = LICENSE
platforms = linux, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = studyhelperbot
python_requires = >=3.7
install_requires =
    psycopg2>=2
    aiogram>=2
zip_safe = no

[options.packages.find]
where = src
