[metadata]
name = studyhelperbot
description = Telegram bot for managing students' tasks
version = 0.0.1
author = Vitalii Morskyi
license = MIT
license_file = LICENSE
platforms = linux, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages =
    studyhelperbot
    studyhelperbot/handlers
python_requires = >=3.7
install_requires =
    psycopg2>=2
    aiogram>=2
    aiosmtplib>=1.1.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=3.0
    mypy>=0.910
    mypy-extensions>=0.4
    flake8>=4.0
    tox>=3.24

[options.packages.find]
where = src

[options.package_data]
studyhelperbot = py.typed

[flake8]
max-line-length = 120
