[metadata]
name = studyhelperbot
description = Telegram bot for managing students' tasks
version = 0.0.1
author = Vitalii Morskyi
license = MIT
license_file = LICENSE
platforms = linux, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages =
    studyhelperbot
    studyhelperbot/handlers
python_requires = >=3.7
install_requires =
    aiogram >= 2.0
    aiosmtplib >= 1.1
    flake8 >= 4.0
    mypy >= 0.910
    mypy-extensions >= 0.4
    psycopg2 >= 2.9
    pytest >= 6.2
    pytest-cov >= 3.0
    pytz >= 2021.3
    rauth >= 0.7
    tox >= 3.24
    requests >= 2.20
    rethinkdb >= 2.4
    setuptools >= 42.0
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=3.0
    mypy>=0.910
    mypy-extensions>=0.4
    flake8>=4.0
    tox>=3.24

[options.packages.find]
where = src

[options.package_data]
studyhelperbot = py.typed

[flake8]
max-line-length = 120
